@@ -1,9 +1,10 @@
 == Near future
 
-* add missing raises to documentation (interpolation, loading)
 * ban reserved keys while processing kinds (including :default)
 * update documentation
 * add validation checks to interpolation (options, tokens in options) and to API (arguments)
+* backward compatible constants
+* add missing raises to documentation (interpolation, loading[done])
 
 * allow different descriptions for aliases pointing to the same token, e.g.: now: @present ="description"
 
