@@ -16,6 +16,7 @@
   * Added I18n::Inflector::HSet class for keeping collections of data
   * Interpolation method moved to I18n::Inflector::Interpolate module
   * All inflection related exceptions now have the attribute "key" containing key name
+  * Passing :raises option to the translate automatically sets :inflector_raises
 
 * minor bugfixes
 
